--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <!-- <link rel="icon" type="image/png" href="./images/fav.png" /> -->
+    <link rel="icon" type="image/png" href="./images/fav.png" />
     <!-- Fonts -->
     <link
       href="https://fonts.googleapis.com/css?family=Barlow:400,500,600,700|Merriweather+Sans:300,300i,400,400i,700,800|Roboto+Condensed:300,300i,400,700"
