--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         </nav>
       </div>
     </header>
-
+<!-- Slider -->
     <section id="hero-slider">
       <h1 class="text-center mb-5">SpeakPulse Insights</h1>
 
@@ -208,12 +208,13 @@
         </div>
       </div>
     </section>
-
+    <!-- Middle Content -->
     <main id="main">
       <div class="container-fluid p-0">
         <div class="row">
-          <div class="col-md-9">
-            <div class="main-left">
+          <!-- Left Blog side -->
+          <div class="col-md-8">
+            <div class="main-left pt-3">
               <div class="item row pl-5 py-5 pr-2">
                 <div class="col-md-5">
                   <img src="./images/3.jpg" alt="Blog image" />
@@ -438,8 +439,53 @@
               </div>
             </div>
           </div>
-          <div class="col-md-3">
-            <div class="main-right"></div>
+          <!-- Right Sidebar -->
+          <div class="col-md-4">
+            <div class="main-right py-5">
+               <div class="right-content-middle pt-3">
+                 <!-- Search form -->
+                  <!-- <label class="sr-only" for="inlineSearchbox">Search</label> -->
+                <div class="input-group mb-2 mr-sm-2">
+                  <input type="text" class="form-control" id="inlineSearchbox" placeholder="Search">
+                  <div class="input-group-append">
+                      <button type="submit" class="input-group-text"><i class="fa fa-search"></i></button>
+                    </div>
+                </div>
+                <!-- title -->
+                <h4 class="barbox-title mt-5">POPULAR POSTS</h4>
+
+                <ul class="popular-post-list pb-5">
+                  <li><a href="#">Help your students and clients speak professionally and confidently</a></li>
+                  <li><a href="#">Three quick and easy ways to improve your speech delivery</a></li>
+                  <li><a href="#">Binary Interjections’ and How to Avoid Using Them</a></li>
+                  <li><a href="#">The three parts to communicating effectively in business settings</a></li>
+                  <li><a href="#">Looking for a Personal Speech Coach? We Have a Better Solution.</a></li>
+                  <li><a href="#">Strategies for Acing your Job Interview</a></li>
+                  <li><a href="#">Land Your Best Job By Practicing Interview Skills</a></li>
+                  <li><a href="#">Tony Robbin’s Speaking Insight</a></li>
+                  <li><a href="#">Does Public Speaking Make You Weak in the Knees?</a></li>
+                </ul>
+
+                <h4 class="barbox-title mt-5">CATEGORY</h4>
+
+                <ul class="catagory-list">
+                  <li><a href="#">Interviewing</a></li>
+                  <li><a href="#">Preparing</a></li>
+                  <li><a href="#">Speaking Skills</a></li>
+                </ul>
+
+                <h4 class="barbox-title mt-5 mb-3">POPULAR POSTS</h4>
+
+                <ul class="popular-post-list pb-5">
+                  <li><a href="#">July 2019</a></li>
+                  <li><a href="#">June 2019</a></li>
+                  <li><a href="#">May 2019</a></li>
+                  <li><a href="#">September 2018</a></li>
+                  <li><a href="#">August 2017</a></li>
+                </ul>
+                
+               </div>
+            </div>
           </div>
         </div>
       </div>
