--- a/index.html
+++ b/index.html
@@ -454,7 +454,7 @@
                 <!-- title -->
                 <h4 class="barbox-title mt-5">POPULAR POSTS</h4>
 
-                <ul class="popular-post-list pb-5">
+                <ul class="popular-post-list pb-4">
                   <li><a href="#">Help your students and clients speak professionally and confidently</a></li>
                   <li><a href="#">Three quick and easy ways to improve your speech delivery</a></li>
                   <li><a href="#">Binary Interjections’ and How to Avoid Using Them</a></li>
@@ -468,13 +468,13 @@
 
                 <h4 class="barbox-title mt-5">CATEGORY</h4>
 
-                <ul class="catagory-list">
+                <ul class="catagory-list pb-4">
                   <li><a href="#">Interviewing</a></li>
                   <li><a href="#">Preparing</a></li>
                   <li><a href="#">Speaking Skills</a></li>
                 </ul>
 
-                <h4 class="barbox-title mt-5 mb-3">POPULAR POSTS</h4>
+                <h4 class="barbox-title mt-5 mb-3">ARCHIVES</h4>
 
                 <ul class="popular-post-list pb-5">
                   <li><a href="#">July 2019</a></li>
