--- a/index.html
+++ b/index.html
@@ -491,6 +491,26 @@
       </div>
     </main>
 
+    <footer id="site-footer">
+      <div class="footer-top d-flex justify-content-between align-items-center">
+        <div class="logo"><img src="./images/logo.png" alt="logo"></div>
+        <ul class="d-flex terms-policy">
+          <li><a href="#">TERMS</a></li>
+          <li><a href="#">PRIVACY POLICY</a></li>
+        </ul>
+
+        <ul class="social-links d-flex">
+          <li><a href="#"><i class="fa fa-facebook-square"></i></a></li>
+          <li><a href="#"><i class="fa fa-twitter-square"></i></a></li>
+          <li><a href="#"><i class="fa fa-youtube-square"></i></a></li>
+        </ul>
+      </div>
+      <!-- bottom -->
+      <div class="footer-bottom">
+        <p class="text-center">© 2018 speakpulse</p>
+      </div>
+    </footer>
+
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script
