--- a/index.html
+++ b/index.html
@@ -106,10 +106,10 @@
       <div class="container">
         <div id="hero-carousel" class="owl-carousel">
           <div class="item row">
-            <div class="col-md-6">
+            <div class="col-lg-6">
               <img src="./images/1.jpg" alt="slider image" />
             </div>
-            <div class="col-md-6 d-flex flex-column justify-content-center">
+            <div class="col-lg-6 mt-4 mt-lg-0 mb-3 mb-lg-0 d-flex flex-column justify-content-center">
               <h4>Strategies for Acing your Job Interview</h4>
               <p>
                 Whether you are a high-powered executive or an intern just
@@ -139,10 +139,10 @@
             </div>
           </div>
           <div class="item row">
-            <div class="col-md-6">
+            <div class="col-lg-6">
               <img src="./images/3.jpg" alt="slider image" />
             </div>
-            <div class="col-md-6 d-flex flex-column justify-content-center">
+            <div class="col-lg-6 mt-4 mt-lg-0 mb-3 mb-lg-0 d-flex flex-column justify-content-center">
               <h4>Tony Robbin’s Speaking Insight</h4>
               <p>
                 Every person I meet whether in business, at home or in a social
@@ -173,10 +173,10 @@
             </div>
           </div>
           <div class="item row">
-            <div class="col-md-6">
+            <div class="col-lg-6">
               <img src="./images/2.jpg" alt="slider image" />
             </div>
-            <div class="col-md-6 d-flex flex-column justify-content-center">
+            <div class="col-lg-6 mt-4 mt-lg-0 mb-3 mb-lg-0 d-flex flex-column justify-content-center">
               <h4>Does Public Speaking Make You Weak in the Knees?</h4>
               <p>
                 Every person I meet whether in business, at home or in a social
