--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <header id="top-header">
       <div class="container-fluid">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-          <a class="navbar-brand" href="#"
+          <a class="navbar-brand" href="index.html"
             ><img src="./images/logo.png" alt="speak pulse logo"
           /></a>
           <button
@@ -121,7 +121,7 @@
                 those with a high school…
               </p>
               <ul class="slider-footer">
-                <li><a href="#" class="read-more">READ MORE</a></li>
+                <li><a href="./blog-details.html" class="read-more">READ MORE</a></li>
                 <li>
                   <p>
                     <span><i class="fa fa-calendar"></i></span> July 11, 2019
@@ -232,7 +232,7 @@
                     but…
                   </p>
                   <div class=" mt-3">
-                    <a href="#" class="read-more">READ MORE</a>
+                    <a href="./blog-details.html" class="read-more">READ MORE</a>
                   </div>
                   <ul class="blog-footer d-flex mt-2 justify-content-end">
                     <li class="ml-3">
@@ -269,7 +269,7 @@
                     but…
                   </p>
                   <div class=" mt-3">
-                    <a href="#" class="read-more">READ MORE</a>
+                    <a href="./blog-details.html" class="read-more">READ MORE</a>
                   </div>
                   <ul class="blog-footer d-flex mt-2 justify-content-end">
                     <li class="ml-3">
@@ -306,7 +306,7 @@
                     but…
                   </p>
                   <div class=" mt-3">
-                    <a href="#" class="read-more">READ MORE</a>
+                    <a href="./blog-details.html" class="read-more">READ MORE</a>
                   </div>
                   <ul class="blog-footer d-flex mt-2 justify-content-end">
                     <li class="ml-3">
@@ -343,7 +343,7 @@
                     but…
                   </p>
                   <div class=" mt-3">
-                    <a href="#" class="read-more">READ MORE</a>
+                    <a href="./blog-details.html" class="read-more">READ MORE</a>
                   </div>
                   <ul class="blog-footer d-flex mt-2 justify-content-end">
                     <li class="ml-3">
@@ -380,7 +380,7 @@
                     but…
                   </p>
                   <div class=" mt-3">
-                    <a href="#" class="read-more">READ MORE</a>
+                    <a href="./blog-details.html" class="read-more">READ MORE</a>
                   </div>
                   <ul class="blog-footer d-flex mt-2 justify-content-end">
                     <li class="ml-3">
@@ -417,7 +417,7 @@
                     but…
                   </p>
                   <div class=" mt-3">
-                    <a href="#" class="read-more">READ MORE</a>
+                    <a href="./blog-details.html" class="read-more">READ MORE</a>
                   </div>
                   <ul class="blog-footer d-flex mt-2 justify-content-end">
                     <li class="ml-3">
