--- a/index.html
+++ b/index.html
@@ -493,7 +493,7 @@
 
     <footer id="site-footer">
       <div class="footer-top d-flex justify-content-between align-items-center">
-        <div class="logo"><img src="./images/logo.png" alt="logo"></div>
+          <div class="logo"><a href="index.html"><img src="./images/logo.png" alt="logo"></a></div>
         <ul class="d-flex terms-policy">
           <li><a href="#">TERMS</a></li>
           <li><a href="#">PRIVACY POLICY</a></li>
