--- a/blog-details.html
+++ b/blog-details.html
@@ -129,7 +129,7 @@
                  <p>When giving a speech, a presenter must be prepared for the unexpected is another great <a href="#">pubic speaking tip</a>.  Sometimes difficult questions are asked, or an unanticipated comment comes from the audience.  Kristina found that SpeakPulse helps her to think better on her feet. “It will ask me hypothetical questions on various topics, and I am given a minute to answer them,” stated Kristina.  “Then my answers are evaluated by SpeakPulse. I find the constructive feedback helps me to provide more powerful answers, no matter what the question may be.”</p>
                  <h3>Don’t Shy Away From Public Speaking</h3>
                  <p>Don’t let the fear of public speaking hinder your career success.  With SpeakPulse, <a href="#">improve your presentation skills</a> so you can be the star at the next event.  This easy-to-use mobile speaking app provides many valuable tools that can be used anywhere, anytime.  To experience the power of SpeakPulse firsthand, try two coaching sessions for free. It is available either in the <a href="#">Apple Store</a> or <a href="#">Google Play</a>.</p>
-                 <ul class="blog-footer d-flex mt-2 justify-content-end">
+                 <ul class="blog-footer d-flex mt-5 pt-2 justify-content-end">
                         <li class="ml-3">
                           <p>
                             <span><i class="fa fa-calendar"></i></span> July 11,
