--- a/blog-details.html
+++ b/blog-details.html
@@ -70,7 +70,7 @@
                 <a class="nav-link" href="/contact">Contact</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="insigts">SpeakPulse Insights</a>
+                <a class="nav-link" href="insigts"><span class="menu_hasi">SpeakPulse</span> Insights</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link download-app-link" href="/download"
@@ -200,18 +200,28 @@
     </main>
 
     <footer id="site-footer">
-      <div class="footer-top d-flex justify-content-between align-items-center">
-        <div class="logo"><a href="index.html"><img src="./images/logo.png" alt="logo"></a></div>
-        <ul class="d-flex terms-policy">
-          <li><a href="#">TERMS</a></li>
-          <li><a href="#">PRIVACY POLICY</a></li>
-        </ul>
-
-        <ul class="social-links d-flex">
-          <li><a href="#"><i class="fa fa-facebook-square"></i></a></li>
-          <li><a href="#"><i class="fa fa-twitter-square"></i></a></li>
-          <li><a href="#"><i class="fa fa-youtube-square"></i></a></li>
-        </ul>
+      <div class="footer-top">
+        <div class="container-fluid">
+          <div class="row align-items-center">
+            <div class="col-md-4">
+                <div class="logo text-center text-md-left mb-4 mb-md-0"><a href="index.html"><img src="./images/logo.png" alt="logo"></a></div>
+            </div>
+            <div class="col-sm-6 col-md-4">
+                <ul class="d-flex terms-policy justify-content-center">
+                    <li><a href="#">TERMS</a></li>
+                    <li><a href="#">PRIVACY POLICY</a></li>
+                  </ul>
+            </div>
+            <div class="col-sm-6 col-md-4">
+                <ul class="social-links d-flex justify-content-center mt-3 mt-sm-0">
+                    <li><a href="#"><i class="fa fa-facebook-square"></i></a></li>
+                    <li><a href="#"><i class="fa fa-twitter-square"></i></a></li>
+                    <li><a href="#"><i class="fa fa-youtube-square"></i></a></li>
+                  </ul>
+            </div>
+          </div>
+        </div>
+       
       </div>
       <!-- bottom -->
       <div class="footer-bottom">
