--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
                 <a class="nav-link" href="insigts"><span class="menu_hasi">SpeakPulse</span> Insights</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link download-app-link" href="/download"
-                  ><img src="./images/download-btn.png" alt="Download"
-                /></a>
+                <a class="nav-link download-app-link" href="/download">
+                  <span class="down-load-btn">DOWNLOAD APP</span>
+                </a>
               </li>
               <ul class="d-flex">
                 <li class="nav-item">
