--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                   <span class="down-load-btn">DOWNLOAD APP</span>
                 </a>
               </li>
-              <ul class="d-flex">
+              <ul class="d-flex justify-content-center justify-content-lg-start">
                 <li class="nav-item">
                   <a class="nav-link social-link" href="#"
                     ><i class="fa fa-facebook-square"></i
